tree-sitter-jarvil/test/corpus/statements.txt
================================================================================
Variable declaration
================================================================================

let a = 1

--------------------------------------------------------------------------------

(source_file
  (variable_declaration
    (identifier)
    (integer)))

================================================================================
Variable declaration with type
================================================================================

let a: int = 1

--------------------------------------------------------------------------------

(source_file
  (variable_declaration
    (identifier)
    (primitive_type)
    (integer)))

================================================================================
Empty file
================================================================================

--------------------------------------------------------------------------------

(source_file)

================================================================================
Blank lines and comments do not close a block
================================================================================

def f():
    let a = 1

    // a comment at block depth

    let b = 2

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (parameters)
    (block
      (variable_declaration
        (identifier)
        (integer))
      (comment)
      (variable_declaration
        (identifier)
        (integer)))))

================================================================================
Nested blocks dedent together at end of file
================================================================================

def f():
    if a:
        while b:
            return 1

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (identifier)
    (parameters)
    (block
      (if_statement
        (identifier)
        (block
          (while_statement
            (identifier)
            (block
              (return_statement
                (integer)))))))))

================================================================================
Assignment and field assignment
================================================================================

a = 1
self.val = x

--------------------------------------------------------------------------------

(source_file
  (assignment
    (identifier)
    (integer))
  (assignment
    (field_expression
      (self_expression)
      (identifier))
    (identifier)))
